@@ -20,6 +20,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 
 === API changes in 1.14rc1 ===
 * (bug 16798) JSON encoding errors for some characters outside the BMP
+* (bug 16629) prop=info&inprop=protection lists empty legacy protections
+  incorrectly
 
 === Configuration changes in 1.14 ===
 
